<resources>
    <string name="app_name">CriminalIntent2Frag</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="Solved">Solved</string>
    <string name="date">Date</string>
    <string name="date_police">Date</string>
    <string name="call_police">Call Police!</string>
    <string name="requires_police">Requires Police</string>
    <string name="btn_save">Save</string>
    <string name="to_start_list">First Crime</string>
    <string name="to_end_list">Last Crime</string>
    <string name="to_start">To start</string>
    <string name="to_end">To End</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of Crime:</string>
    <string name="crime_description">Crime Description..</string>
    <string name="dialog_time_picker">Time of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="delete_crime">Delete Crime</string>
    <string name="add_first_crime">\t\t\t"''CLICK''"\nto add first crime</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_suspect_text">Choose Suspect</string>

    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is slolved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalItent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <style name="enter_title">Enter a title for the crime</style>
</resources>
