<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="7dp"
    android:orientation="vertical"
    android:padding="7dp"
    android:touchscreenBlocksFocus="false">

    <TextView
        android:id="@+id/tv_title"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="Enter a title for the crime.."
        android:inputType="text"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_details"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="15sp" />


    <EditText
        android:id="@+id/et_details_description"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_margin="20dp"
        android:gravity="top"
        android:hint="@string/crime_description" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tv_date"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_time"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chb_requires_police"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/requires_police" />


        <CheckBox
            android:id="@+id/chb_solved"
            android:layout_marginStart="275dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/Solved" />

    </LinearLayout>

    <Button
        android:id="@+id/crime_suspect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_suspect_text"/>

    <Button
        android:id="@+id/crime_report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_report_text"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save" />

</LinearLayout>