<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_crime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColorLink="#EF9A9A"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@id/tv_date"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <TextView
        android:id="@+id/tv_date"
        style="@android:style/Widget.Holo.Light.TextView"
        android:layout_width="49dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:layout_conversion_absoluteHeight="27dp"
        tools:layout_conversion_absoluteWidth="411dp" />

    <ImageView
        android:id="@+id/crime_solved"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385"
        app:srcCompat="@drawable/ic_solved" />

    <Button
        android:id="@+id/to_start"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="260dp"
        android:onClick="onClickScrollStart"
        android:text="@string/to_start"
        android:textSize="10sp"
        app:layout_constraintEnd_toStartOf="@+id/crime_solved"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <Button
        android:id="@+id/to_end"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="75dp"
        android:layout_height="39dp"
        android:layout_marginStart="282dp"
        android:onClick="onClickScrollEnd"
        android:text="@string/to_end"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="@+id/to_start" />


</androidx.constraintlayout.widget.ConstraintLayout>